fix scrollbar

--- a/src/app/components/HorizontalScroll.module.css
+++ b/src/app/components/HorizontalScroll.module.css
@@ -1,3 +1,13 @@
+body,
+html {
+  overflow: hidden;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background: #000;
+  color: #fff;
+}
+
 .outerWrapper {
   width: 100vw;
   height: 100vh;
@@ -28,10 +38,19 @@
   overflow-x: auto;
   overflow-y: hidden;
   height: 100vh;
-  transition: all 0.5s ease;
-  position: relative; 
-  z-index: 1;         
+  scroll-snap-type: x mandatory;
+  position: relative;
+  z-index: 1;
+
+  /* Hide scrollbar for modern browsers */
+  scrollbar-width: none;        /* Firefox */
+  -ms-overflow-style: none;     /* IE 10+ */
 }
+
+.scrollContainer::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
+
 
 .scrollContainer.menuOpen {
   flex-direction: column;
@@ -173,12 +192,6 @@
 /* Hide scrollbar for Chrome, Safari and Opera */
 .scrollContainer::-webkit-scrollbar {
   display: none;
-}
-
-/* Hide scrollbar for IE, Edge and Firefox */
-.scrollContainer {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
 }
 
 .transformMenu{
