--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,13 +24,3 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
-
-body,
-html {
-  overflow: hidden;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  background: #000;
-  color: #fff;
-}
